--- a/templates/base.html
+++ b/templates/base.html
@@ -1,82 +1,145 @@
 <!DOCTYPE html>
 <html lang="{{ DEFAULT_LANG }}">
 <head>
-        <meta charset="utf-8" />
-        <title>{% block title %}{{ SITENAME }}{%endblock%}</title>
-        <link rel="stylesheet" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/css/{{ CSS_FILE }}" />
-        {% if FEED_ALL_ATOM %}
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="">
+    <meta name="author" content="{{ AUTHOR }}">
+    <title>{% block title %}{{ SITENAME }}{%endblock%}</title>
+    <link rel="stylesheet" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/css/{{ CSS_FILE }}" />
+    {% if FEED_ALL_ATOM %}
         <link href="{{ FEED_DOMAIN }}/{{ FEED_ALL_ATOM }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} Atom Feed" />
-        {% endif %}
-        {% if FEED_ALL_RSS %}
+    {% endif %}
+    {% if FEED_ALL_RSS %}
         <link href="{{ FEED_DOMAIN }}/{{ FEED_ALL_RSS }}" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} RSS Feed" />
-        {% endif %}
+    {% endif %}
 
-        <!--[if IE]>
-            <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-        <![endif]-->
+    <script src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/js/jquery-2.1.0.min.js"></script>
+    <script src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/bootstrap-3.1.1-dist/js/bootstrap.min.js"></script>
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
 </head>
 
-<body id="index" class="home">
-{% include 'github.html' %}
-        <header id="banner" class="body">
-                <h1><a href="{{ SITEURL }}/">{{ SITENAME }} {% if SITESUBTITLE %} <strong>{{ SITESUBTITLE }}</strong>{% endif %}</a></h1>
-                <nav><ul>
-                {% for title, link in MENUITEMS %}
-                    <li><a href="{{ link }}">{{ title }}</a></li>
-                {% endfor %}
-                {% if DISPLAY_PAGES_ON_MENU -%}
-                {% for pg in PAGES %}
-                    <li{% if pg == page %} class="active"{% endif %}><a href="{{ SITEURL }}/{{ pg.url }}">{{ pg.title }}</a></li>
-                {% endfor %}
-                {% endif %}
-                {% if DISPLAY_CATEGORIES_ON_MENU -%}
-                {% for cat, null in categories %}
-                    <li{% if cat == category %} class="active"{% endif %}><a href="{{ SITEURL }}/{{ cat.url }}">{{ cat }}</a></li>
-                {% endfor %}
-                {% endif %}
-                </ul></nav>
-        </header><!-- /#banner -->
-        {% block content %}
-        {% endblock %}
-        <section id="extras" class="body">
-        {% if LINKS %}
-                <div class="blogroll">
-                        <h2>blogroll</h2>
-                        <ul>
-                        {% for name, link in LINKS %}
-                            <li><a href="{{ link }}">{{ name }}</a></li>
-                        {% endfor %}
-                        </ul>
-                </div><!-- /.blogroll -->
-        {% endif %}
-        {% if SOCIAL or FEED_ALL_ATOM or FEED_ALL_RSS %}
-                <div class="social">
-                        <h2>social</h2>
-                        <ul>
-                            {% if FEED_ALL_ATOM %}
-                            <li><a href="{{ FEED_DOMAIN }}/{{ FEED_ALL_ATOM }}" type="application/atom+xml" rel="alternate">atom feed</a></li>
-                            {% endif %}
-                            {% if FEED_ALL_RSS %}
-                            <li><a href="{{ FEED_DOMAIN }}/{{ FEED_ALL_RSS }}" type="application/rss+xml" rel="alternate">rss feed</a></li>
-                            {% endif %}
+<body>
+    <div class="container">
+        <nav class="navbar navbar-default" role="navigation">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="{{ SITEURL }}/">{{ SITENAME }}</a>
+                </div>
 
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        {% for title, link in MENUITEMS %}
+                            <li><a href="{{ link }}">{{ title }}</a></li>
+                        {% endfor %}
+                        {% if DISPLAY_PAGES_ON_MENU -%}
+                            {% for pg in PAGES %}
+                                <li{% if pg == page %} class="active"{% endif %}>
+                                    <a href="{{ SITEURL }}/{{ pg.url }}">{{ pg.title }}</a>
+                                </li>
+                            {% endfor %}
+                        {% endif %}
+                        {% if DISPLAY_CATEGORIES_ON_MENU -%}
+                            {% for cat, null in categories %}
+                                <li{% if cat == category %} class="active"{% endif %}>
+                                    <a href="{{ SITEURL }}/{{ cat.url }}">{{ cat }}</a>
+                                </li>
+                            {% endfor %}
+                        {% endif %}
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <div class="row">
+
+            <div class="col-sm-8">{% block content %}{% endblock %}</div>
+
+            <div class="col-sm-3 col-sm-offset-1 right-sidebar">
+                {% if FEED_ALL_ATOM or FEED_ALL_RSS %}
+                    <ul class="list-unstyled">
+                        {% if FEED_ALL_ATOM %}
+                            <li>
+                                <a href="{{ FEED_DOMAIN }}/{{ FEED_ALL_ATOM }}"
+                                   type="application/atom+xml"
+                                   rel="alternate">
+                                    <span class="icomoon-feed" ></span> Atom Feed
+                                </a>
+                            </li>
+                        {% endif %}
+                        {% if FEED_ALL_RSS %}
+                            <li>
+                                <span class="icomoon-feed" ></span>
+                                <a href="{{ FEED_DOMAIN }}/{{ FEED_ALL_RSS }}"
+                                   type="application/rss+xml"
+                                   rel="alternate">
+                                    RSS Feed
+                                </a>
+                            </li>
+                        {% endif %}
+                    </ul>
+                    {% if SOCIAL or LINKS %}<hr />{% endif %}
+                {% endif %}
+
+                {% if SOCIAL %}
+                    <ul class="list-unstyled">
                         {% for name, link in SOCIAL %}
                             <li><a href="{{ link }}">{{ name }}</a></li>
                         {% endfor %}
-                        </ul>
-                </div><!-- /.social -->
+                    </ul>
+                    {% if LINKS %}<hr />{% endif %}
+                {% endif %}
+
+                {% if LINKS %}
+                    <ul>
+                        {% for name, link in LINKS %}
+                            <li><a href="{{ link }}">{{ name }}</a></li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
+
+            </div> <!-- .col-sm-3 .right-sidebar -->
+
+        </div> <!-- .row -->
+
+    </div> <!-- .container -->
+
+    <div class="container-fluid footer">
+        {% if FOOTER_TEXT %}
+            <p class="text-center">{{ FOOTER_TEXT }}</p>
         {% endif %}
-        </section><!-- /#extras -->
+        <p class="text-center">
+            Proudly powered by <a href="http://getpelican.com/">Pelican</a>,
+            which takes great advantage of
+            <a href="http://python.org">Python</a>.
+        </p>
+        <p class="text-center">
+            The theme designed by <a href="mailto:oleg.lomaka@gmail.com">Oleg Lomaka</a>.
+            Based on <a href="http://getbootstrap.com">Twitter Bootstrap</a>.
+            Original from
+            <a href="http://coding.smashingmagazine.com/2009/08/04/designing-a-html-5-layout-from-scratch/">
+                Smashing Magazine
+            </a>.
+        </p>
+    </div>
 
-        <footer id="contentinfo" class="body">
-                <address id="about" class="vcard body">
-                Proudly powered by <a href="http://getpelican.com/">Pelican</a>, which takes great advantage of <a href="http://python.org">Python</a>.
-                </address><!-- /#about -->
+    {% include 'analytics.html' %}
+    {% include 'disqus_script.html' %}
 
-                <p>The theme is by <a href="http://coding.smashingmagazine.com/2009/08/04/designing-a-html-5-layout-from-scratch/">Smashing Magazine</a>, thanks!</p>
-        </footer><!-- /#contentinfo -->
-
-{% include 'analytics.html' %}
-{% include 'disqus_script.html' %}
 </body>
 </html>
