--- a/templates/archives.html
+++ b/templates/archives.html
@@ -1,13 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
-<section id="content" class="body">
-<h1>Archives for {{ SITENAME }}</h1>
+<div class="page-header"><h1>Archives for {{ SITENAME }}</h1></div>
 
-<dl>
+<dl class="dl-horizontal">
 {% for article in dates %}
     <dt>{{ article.locale_date }}</dt>
     <dd><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></dd>
 {% endfor %}
 </dl>
-</section>
+
 {% endblock %}
