--- a/templates/authors.html
+++ b/templates/authors.html
@@ -4,12 +4,13 @@
 
 {% block content %}
 
-<section id="content" class="body">
-    <h1>Authors on {{ SITENAME }}</h1>
+    <div class="page-header"><h1>Authors on {{ SITENAME }}</h1></div>
 
-    {%- for author, articles in authors|sort %}
-        <li><a href="{{ SITEURL }}/{{ author.url }}">{{ author }}</a> ({{ articles|count }})</li>
-    {% endfor %}
+    <ul>
+        {%- for author, articles in authors|sort %}
+            <li><a href="{{ SITEURL }}/{{ author.url }}">{{ author }}</a> ({{ articles|count }})</li>
+        {% endfor %}
+    </ul>
 </section>
 
 {% endblock %}
