--- a/templates/index.html
+++ b/templates/index.html
@@ -1,58 +1,43 @@
 {% extends "base.html" %}
-{% block content_title %}{% endblock %}
 {% block content %}
 {% if articles %}
+
     {% for article in articles_page.object_list %}
-
-        {# First item #}
-        {% if loop.first and not articles_page.has_previous() %}
-            <aside id="featured" class="body">
-                <article>
-                    <h1 class="entry-title"><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h1>
-                    {% include 'article_infos.html' %}{{ article.content }}{% include 'comments.html' %}
-                </article>
-                {% if loop.length == 1 %}
-                    {% include 'pagination.html' %}
-                {% endif %}
-            </aside><!-- /#featured -->
-            {% if loop.length > 1 %}
-                <section id="content" class="body">
-                    <h1>Other articles</h1>
-                    <hr />
-                    <ol id="posts-list" class="hfeed">
-            {% endif %}
-        {# other items #}
-        {% else %}
-            {% if loop.first and articles_page.has_previous %}
-                <section id="content" class="body">
-                    <ol id="posts-list" class="hfeed" start="{{ articles_paginator.per_page -1 }}">
-            {% endif %}
-            <li><article class="hentry">
-                <header>
-                    <h1><a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark"
-                           title="Permalink to {{ article.title|striptags }}">{{ article.title }}</a></h1>
-                </header>
-
-                <div class="entry-content">
-                {% include 'article_infos.html' %}
-                {{ article.summary }}
-                <a class="readmore" href="{{ SITEURL }}/{{ article.url }}">read more</a>
-                {% include 'comments.html' %}
-                </div><!-- /.entry-content -->
-            </article></li>
-        {% endif %}
-        {% if loop.last %}
-            </ol><!-- /#posts-list -->
-            {% if loop.last and (articles_page.has_previous()
-            or not articles_page.has_previous() and loop.length > 1) %}
-                {% include 'pagination.html' %}
-            {% endif %}
-            </section><!-- /#content -->
-        {% endif %}
+        <h1 class="article-title"><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h1>
+        {% include 'article_infos.html' %}
+        {{ article.summary }}
+        <a href="{{ SITEURL }}/{{ article.url }}">read more</a>
+        {% if not loop.last %}<hr />{% endif %}
     {% endfor %}
+
+    <div class="clearfix"></div>
+
+    {% if DEFAULT_PAGINATION and articles_paginator.num_pages > 1 %}
+        <ul class="pagination">
+            {% if articles_page.has_previous() %}
+                <li>
+                    <a href="{{ SITEURL }}/{{ articles_previous_page.url }}">&laquo;</a>
+                </li>
+            {% else %}
+                <li class="disabled"><a href="#" onclick="return false;">&laquo;</a></li>
+            {% endif %}
+            {% for page in range(1, articles_paginator.num_pages + 1) %}
+                <li{% if page == articles_page.number %} class="active"{% endif %}>
+                    <a href="{{ SITEURL }}/{{ articles_paginator.page(page).url }}">{{ page }}</a>
+                </li>
+            {% endfor %}
+            {% if articles_page.has_next() %}
+                <li>
+                    <a href="{{ SITEURL }}/{{ articles_next_page.url }}">&raquo;</a>
+                </li>
+            {% else %}
+                <li class="disabled"><a href="#" onclick="return false;">&raquo;</a></li>
+            {% endif %}
+            </li>
+        </ul>
+    {% endif %}
+
 {% else %}
-<section id="content" class="body">
-<h2>Pages</h2>
     {% for page in PAGES %}
         <li><a href="{{ SITEURL }}/{{ page.url }}">{{ page.title }}</a></li>
     {% endfor %}
