--- a/templates/page.html
+++ b/templates/page.html
@@ -1,12 +1,8 @@
 {% extends "base.html" %}
 {% block title %}{{ page.title }}{% endblock %}
 {% block content %}
-<section id="content" class="body">
-    <h1 class="entry-title">{{ page.title }}</h1>
+    <div class="page-header"><h1>{{ page.title }}</h1></div>
     {% import 'translations.html' as translations with context %}
     {{ translations.translations_for(page) }}
-    {% if PDF_PROCESSOR %}<a href="{{ SITEURL }}/pdf/{{ page.slug }}.pdf">get
-    the pdf</a>{% endif %}
     {{ page.content }}
-</section>
 {% endblock %}
